Stop the code from jumping around when a word is highlit.
Reduce the width, but keep the height so the top of the highlight coincides with the top of the line's hover highlight.

--- a/dxr/static/css/dxr.css
+++ b/dxr/static/css/dxr.css
@@ -204,7 +204,7 @@ table.result_snippet tr {
     margin: .3rem;
 }
 mark {
-    padding: .3rem;
+    padding: .3rem 0;
 }
 /* Context Menu */
 .context-menu {
